--- a/templates/home.html
+++ b/templates/home.html
@@ -9,21 +9,23 @@
         <div class="newsletter-container" >
             <div id="this-week-container">
                 <h5>This week's newsletter</h5>
-                <a class="newsletter-button" href="https://www.youtube.com/watch?v=xfbq8-o7qA4" target="_blank">
-                    <button>{content-holder-test}</button>
+                <a class="newsletter-button" href="{{db_data[0].link}}" target="_blank">
+                    <button>Newsletter {{db_data[0].date}}</button>
                 </a>
             </div>
             <div id="last-week-container">
                 <h5>Last week's newsletter</h5>
-                <a class="newsletter-button" href="https://www.youtube.com/watch?v=xfbq8-o7qA4" target="_blank">
-                    <button>{content-holder-test}</button>
+                <a class="newsletter-button" href="{{db_data[1].link}}" target="_blank">
+                    <button>Newsletter {{db_data[1].date}}</button>
                 </a>
             </div>
             <div id="other-week-container">
                 <h5>Other weeks' newsletter</h5>
-                <a class="newsletter-button" href="https://www.youtube.com/watch?v=xfbq8-o7qA4" target="_blank">
-                    <button>{content-holder-test}</button>
+                {%for item in db_data[2:]%}
+                <a class="newsletter-button" href="{{item.link}}" target="_blank">
+                    <button>Newsletter {{item.date}}</button>
                 </a>
+                {%endfor%}
             </div>
         </div>
     </main>
