--- a/templates/admin.html
+++ b/templates/admin.html
@@ -37,7 +37,7 @@
 {%endblock%}
 
 {%block footer%}
-    <a><p>logout</p></a>
+    <a href="/logout"><p>logout</p></a>
 {%endblock%}
             
 {%block script%}
