--- a/templates/update.html
+++ b/templates/update.html
@@ -26,7 +26,7 @@
 {%endblock%}
 
 {%block footer%}
-    <a><p>logout</p></a>
+    <a href="/logout"><p>logout</p></a>
 {%endblock%}
             
 {%block script%}
