--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
         {%block head%}{%endblock%}
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" type="image/png" href="{{ url_for('static', filename='imgs/church.png') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/olog-style.css') }}">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
