--- a/templates/admin.html
+++ b/templates/admin.html
@@ -9,29 +9,31 @@
 {%endblock%}
 
 {%block content%}
-<div class="newsletter-container" >
-    <button class="add-newsletter"><img src="{{ url_for('static', filename='imgs/plus_icon_green.png') }}" alt="plus-symbol"></button>
-    <div class="add-newsletter-form">
-        <form action="/admin" method="POST">
-            <input type="text" name="link" placeholder="Enter link here" required>
-            <input type="date" name="date" required><br>
-            <div class="form-buttons">
-                <input type="button" value="Cancel">
-                <input type="submit" value="Add" >
+    <main>
+        <div class="newsletter-container" >
+            <button class="add-newsletter"><img src="{{ url_for('static', filename='imgs/plus_icon_green.png') }}" alt="plus-symbol"></button>
+            <div class="add-newsletter-form">
+                <form action="/admin" method="POST">
+                    <input type="text" name="link" placeholder="Enter link here" required>
+                    <input type="date" name="date" required><br>
+                    <div class="form-buttons">
+                        <input type="button" value="Cancel">
+                        <input type="submit" value="Add" >
+                    </div>
+                </form>
             </div>
-        </form>
-    </div>
-    {% for item in db_data%}
-    <div class="newsletter-combo">
-        <a class="newsletter-button" href="{{item.link}}" target="_blank">
-            <button>{{item.date}}</button>
-        </a>
-        <a href="/update/{{item.id}}" class="update-newsletter">
-            <img src="{{ url_for('static', filename='imgs/editing_icon_green.png') }}">
-        </a>
-    </div>
-    {%endfor%}  
-</div>
+            {% for item in db_data%}
+            <div class="newsletter-combo">
+                <a class="newsletter-button" href="{{item.link}}" target="_blank">
+                    <button>{{item.date}}</button>
+                </a>
+                <a href="/update/{{item.id}}" class="update-newsletter">
+                    <img src="{{ url_for('static', filename='imgs/editing_icon_green.png') }}">
+                </a>
+            </div>
+            {%endfor%}  
+        </div>
+    </main>
 {%endblock%}
 
 {%block footer%}
