--- a/static/css/update-card.css
+++ b/static/css/update-card.css
@@ -44,6 +44,7 @@
     flex-direction: column;
     justify-content: center;
     padding: 0px 10px 0px 10px;
+    box-shadow: 1px 1.5px 2.5px #5d9e87;
 }
 
 .update-card-input input{
@@ -54,4 +55,5 @@
     width: 100%;
     padding-left: 4px;
     padding-right: 4px;
+    box-shadow: 1px 1.5px 2.5px #5d9e87;
 }
