--- a/static/css/update-card.css
+++ b/static/css/update-card.css
@@ -20,7 +20,7 @@
 
 .update-card-content h1{
     color: #fff;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 500;
     text-align: center;
 }
@@ -71,7 +71,8 @@
     font-size: 12px;
     width: 3.5rem;
     margin-top: 0px;
-    color:#fff
+    color:#fff;
+    transition-duration: 0.2s
 }
 
 .update-card-buttons .update-card-cancel-btn{
@@ -84,5 +85,26 @@
     background-color: #BF3131;
 }
 
-/* Element States */
+/* Hover States */
+
+.update-card-buttons .update-card-cancel-btn:hover{
+    background-color: rgba(117, 198, 169, 0.3);
+}
+
+.update-card-buttons .update-card-delete-btn:hover{
+    background-color: #9e2828;
+}
+
+/* Active States */
+
+.update-card-buttons .update-card-cancel-btn:active{
+    background-color: rgba(117, 198, 169, 0.3);
+}
+
+.update-card-buttons .update-card-delete-btn:active{
+    background-color: #9e2828;
+}
+
+/* Focus States */
+
 
