--- a/templates/update.html
+++ b/templates/update.html
@@ -5,30 +5,34 @@
 {%endblock%}
 
 {%block header%}
-    <a href='/' target="_blank"><p>Preview website</p></a>
+    <a href="{{ url_for('index') }}" target="_blank"><p>Preview website</p></a>
 {%endblock%}
 
 {%block content%}
 <main>
-    <div class="newsletter-container" >
-        <div class="add-newsletter-form">
-            <form action="/update/{{db_data.id}}" method="POST">
-                <input type="text" name="link" placeholder="Enter link here" value="{{db_data.link}}"required>
-                <input type="date" name="date" value="{{db_data.date}}" required><br>
-                <div class="form-buttons">
-                    <a href="/admin"><input type="button" value="Cancel"></a>
-                    <input type="submit" value="Update" >
+    <form class="update-card-parent" action="{{url_for('update', id=db_data.id)}}" method="POST">
+        <div class="update-card-content">
+            <h1>UPDATE NEWSLETTER</h1>
+            <div class="update-card-inputs">
+                <div class="update-card-input">
+                    <div class="update-card-label"><p>URL</p></div>
+                    <input type="text" name="link" placeholder="Enter link here" value="{{db_data.link}}"required>
                 </div>
-            </form>
-        </div>  
-    </div>
+                <div class="update-card-input">
+                    <div class="update-card-label"><p>DATE</p></div>
+                    <input type="date" name="date" value="{{db_data.date}}" required>
+                </div>
+            </div>
+        </div>
+        <div class="update-card-buttons">
+            <button type="submit" class="update-card-submit-btn">Update</button>
+            <a href="{{ url_for('admin') }}"><button class="update-card-cancel-btn" type="button">Cancel</button></a>
+            <a href="{{url_for('delete', id=db_data.id)}}"><button class="update-card-delete-btn" type="button">Delete</button></a>
+        </div>
+    </form>
 </main>
 {%endblock%}
 
 {%block footer%}
     <a href="/logout"><p>logout</p></a>
-{%endblock%}
-            
-{%block script%}
-    <script src="{{ url_for('static', filename='scripts/unhide-form.js') }}"></script>
 {%endblock%}
